--- a/samples/BiliBiliTool/src/Hangfire.Dashboard.Extensions/Pages/PeriodicJobPage.cshtml
+++ b/samples/BiliBiliTool/src/Hangfire.Dashboard.Extensions/Pages/PeriodicJobPage.cshtml
@@ -28,10 +28,42 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                <h4 class="modal-title" id="myModalLabel">Add/Edit</h4>
             </div>
             <div class="modal-body">
-                ...
+                <form action="" class="form-horizontal">
+                    <div class="form-group">
+                        @*<input type="hidden" class="form-control" disabled="disabled" id="modal_id">*@
+                        <label for="" class="col-sm-2 control-label">Job Id</label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control" disabled="disabled" id="modal_Id">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="" class="col-sm-2 control-label">Cron</label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control" id="modal_Cron">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="" class="col-sm-2 control-label">Time Zone</label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control" id="modal_TimeZoneId">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="" class="col-sm-2 control-label">Class</label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control" id="modal_Class">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="" class="col-sm-2 control-label">Method</label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control" id="modal_Method">
+                        </div>
+                    </div>
+                </form>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -47,6 +79,11 @@
 
         <div class="js-jobs-list">
             <div class="btn-toolbar btn-toolbar-top">
+                <button class="btn btn-default btn-sm"
+                        data-toggle="modal"
+                        data-target="#myModal">
+                    Add
+                </button>
                 @*触发*@
                 @if (!IsReadOnly)
                 {
@@ -245,9 +282,15 @@
 
                                 @*操作*@
                                 <td style="min-width:200px" class="align-right">
-                                    <button class="btn btn-info btn-xs"
+                                    <button type="button" class="js-periodic-jobs-list-edit btn btn-info btn-xs"
                                         data-toggle="modal"
-                                        data-target="#myModal">
+                                        data-target="#myModal"
+                                        data-id="@job.Id"
+                                        data-cron="@job.Cron"
+                                        data-queue="@job.Queue"
+                                        data-class="@job.Class"
+                                        data-method="@job.Method"
+                                        data-timezoneid="@job.TimeZoneId">
                                         Edit
                                     </button>
                                     @if (job.JobStateEnum == JobState.Running)
