--- a/samples/BiliBiliTool/src/Hangfire.Dashboard.Extensions/Pages/PeriodicJobPage.cshtml
+++ b/samples/BiliBiliTool/src/Hangfire.Dashboard.Extensions/Pages/PeriodicJobPage.cshtml
@@ -22,56 +22,13 @@
     Init();
 }
 
-<!-- Modal -->
+<!-- Modal模态框模板 -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">Add/Edit</h4>
-            </div>
-            <div class="modal-body">
-                <form action="" class="form-horizontal">
-                    <div class="form-group">
-                        @*<input type="hidden" class="form-control" disabled="disabled" id="modal_id">*@
-                        <label for="" class="col-sm-2 control-label">Job Id</label>
-                        <div class="col-sm-9">
-                            <input type="text" class="form-control" disabled="disabled" id="modal_Id">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="" class="col-sm-2 control-label">Cron</label>
-                        <div class="col-sm-9">
-                            <input type="text" class="form-control" id="modal_Cron">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="" class="col-sm-2 control-label">Time Zone</label>
-                        <div class="col-sm-9">
-                            <input type="text" class="form-control" id="modal_TimeZoneId">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="" class="col-sm-2 control-label">Class</label>
-                        <div class="col-sm-9">
-                            <input type="text" class="form-control" id="modal_Class">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="" class="col-sm-2 control-label">Method</label>
-                        <div class="col-sm-9">
-                            <input type="text" class="form-control" id="modal_Method">
-                        </div>
-                    </div>
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
-        </div>
+        <!-- 内容有具体事件决定加载 -->
     </div>
 </div>
+
 
 <div class="row">
     <div class="col-md-12">
@@ -88,9 +45,9 @@
                 @if (!IsReadOnly)
                 {
                     <button class="js-jobs-list-command btn btn-sm btn-primary"
-                        data-url="@Url.To("/recurring/trigger")"
-                        data-loading-text="@Strings.RecurringJobsPage_Triggering"
-                        disabled="disabled">
+                            data-url="@Url.To("/recurring/trigger")"
+                            data-loading-text="@Strings.RecurringJobsPage_Triggering"
+                            disabled="disabled">
                         <span class="glyphicon glyphicon-play-circle"></span>
                         @Strings.RecurringJobsPage_TriggerNow
                     </button>
@@ -99,10 +56,10 @@
                 @if (!IsReadOnly)
                 {
                     <button class="js-jobs-list-command btn btn-sm btn-default"
-                        data-url="@Url.To("/periodic/remove")"
-                        data-loading-text="@Strings.Common_Deleting"
-                        data-confirm="@Strings.Common_DeleteConfirm"
-                        disabled="disabled">
+                            data-url="@Url.To("/periodic/remove")"
+                            data-loading-text="@Strings.Common_Deleting"
+                            data-confirm="@Strings.Common_DeleteConfirm"
+                            disabled="disabled">
                         <span class="glyphicon glyphicon-remove"></span>
                         @Strings.Common_Delete
                     </button>
@@ -283,20 +240,20 @@
                                 @*操作*@
                                 <td style="min-width:200px" class="align-right">
                                     <button type="button" class="js-periodic-jobs-list-edit btn btn-info btn-xs"
-                                        data-toggle="modal"
-                                        data-target="#myModal"
-                                        data-id="@job.Id"
-                                        data-cron="@job.Cron"
-                                        data-queue="@job.Queue"
-                                        data-class="@job.Class"
-                                        data-method="@job.Method"
-                                        data-timezoneid="@job.TimeZoneId">
+                                            data-toggle="modal"
+                                            data-target="#myModal"
+                                            data-id="@job.Id"
+                                            data-cron="@job.Cron"
+                                            data-queue="@job.Queue"
+                                            data-class="@job.Class"
+                                            data-method="@job.Method"
+                                            data-timezoneid="@job.TimeZoneId">
                                         Edit
                                     </button>
                                     @if (job.JobStateEnum == JobState.Running)
                                     {
                                         <button type="button" class="js-period-jobs-list-command btn btn-warning btn-xs"
-                                        data-url="@Url.To($"{PeriodicJobPage.PageRoute}/stop?jobId={job.Id}")">
+                                                data-url="@Url.To($"{PeriodicJobPage.PageRoute}/stop?jobId={job.Id}")">
                                             Stop
                                         </button>
                                         <button class="js-period-jobs-list-command btn btn-primary btn-xs">
@@ -307,7 +264,7 @@
                                     @if (job.JobStateEnum == JobState.Stoped)
                                     {
                                         <button class="js-period-jobs-list-command btn btn-success btn-xs"
-                                        data-url="@Url.To($"{PeriodicJobPage.PageRoute}/start?jobId={job.Id}")">
+                                                data-url="@Url.To($"{PeriodicJobPage.PageRoute}/start?jobId={job.Id}")">
                                             Start
                                         </button>
                                     }
@@ -320,9 +277,9 @@
                                         <pre class="stack-trace"><code>@Html.StackTrace(job.Error)</code></pre>
                                     </td>
                                 </tr>
-                                }
-                            </tr>
-                        }
+                            }
+                                </tr>
+                            }
                     </tbody>
                 </table>
             </div>
@@ -335,6 +292,7 @@
         }
     </div>
 </div>
+
 
 <script src="@Url.To("/js0")"></script>
 <script src="@Url.To("/js-ext0")"></script>
