--- a/samples/BiliBiliTool/src/Hangfire.Dashboard.Extensions/Pages/PeriodicJobEditPage.cshtml
+++ b/samples/BiliBiliTool/src/Hangfire.Dashboard.Extensions/Pages/PeriodicJobEditPage.cshtml
@@ -30,34 +30,62 @@
     </div>
     <div class="modal-body">
         <form action="" class="form-horizontal">
+
+            @*Id*@
             <div class="form-group">
-                <label for="" class="col-sm-2 control-label">Job Id</label>
+                <label for="" class="col-sm-2 control-label">@Strings.Common_Id</label>
                 <div class="col-sm-9">
-                    <input type="text" class="form-control" disabled="disabled" id="modal_Id" value="@this.PeriodicJob.Id" />
+                    <input type="text" class="form-control"
+                           disabled="disabled"
+                           id="modal_Id"
+                           value="@this.PeriodicJob.Id" />
                 </div>
             </div>
+
+            @*Cron*@
             <div class="form-group">
-                <label for="" class="col-sm-2 control-label">Cron</label>
+                <label for="" class="col-sm-2 control-label">@Strings.RecurringJobsPage_Table_Cron</label>
                 <div class="col-sm-9">
-                    <input type="text" class="form-control" id="modal_Cron">
+                    <input type="text" class="form-control"
+                           id="modal_Cron"
+                           value="@this.PeriodicJob.Cron">
                 </div>
             </div>
+
+            @*时区*@
             <div class="form-group">
-                <label for="" class="col-sm-2 control-label">Time Zone</label>
+                <label for="" class="col-sm-2 control-label">@Strings.RecurringJobsPage_Table_TimeZone</label>
                 <div class="col-sm-9">
-                    <input type="text" class="form-control" id="modal_TimeZoneId">
+                    <input type="text" class="form-control"
+                           id="modal_TimeZoneId"
+                           value="@PeriodicJob.TimeZoneId">
                 </div>
             </div>
+
+            @*队列*@
+            <div class="form-group">
+                <label for="" class="col-sm-2 control-label">@Strings.Common_Enqueued</label>
+                <div class="col-sm-9">
+                    <input type="text" class="form-control"
+                           id="modal_Queue"
+                           value="@PeriodicJob.Queue">
+                </div>
+            </div>
+
             <div class="form-group">
                 <label for="" class="col-sm-2 control-label">Class</label>
                 <div class="col-sm-9">
-                    <input type="text" class="form-control" id="modal_Class">
+                    <input type="text" class="form-control"
+                           id="modal_Class"
+                           value="@PeriodicJob.Class">
                 </div>
             </div>
             <div class="form-group">
                 <label for="" class="col-sm-2 control-label">Method</label>
                 <div class="col-sm-9">
-                    <input type="text" class="form-control" id="modal_Method">
+                    <input type="text" class="form-control"
+                           id="modal_Method"
+                           value="@PeriodicJob.Method">
                 </div>
             </div>
         </form>
