--- a/samples/BiliBiliTool/src/Hangfire.Dashboard.Extensions/Pages/PeriodicJobPage.cshtml
+++ b/samples/BiliBiliTool/src/Hangfire.Dashboard.Extensions/Pages/PeriodicJobPage.cshtml
@@ -33,10 +33,10 @@
 <div class="row">
     <div class="col-md-12">
         <h1 class="page-header">@Strings.RecurringJobsPage_Title</h1>
-
         <div class="js-jobs-list">
             <div class="btn-toolbar btn-toolbar-top">
-                <button class="btn btn-default btn-sm"
+                @*新增*@
+                <button class="btn btn-default btn-sm js-periodic-jobs-list-edit"
                         data-toggle="modal"
                         data-target="#myModal">
                     @Strings.Common_Created
@@ -45,9 +45,9 @@
                 @if (!IsReadOnly)
                 {
                     <button class="js-jobs-list-command btn btn-sm btn-primary"
-                        data-url="@Url.To("/recurring/trigger")"
-                        data-loading-text="@Strings.RecurringJobsPage_Triggering"
-                        disabled="disabled">
+                            data-url="@Url.To("/recurring/trigger")"
+                            data-loading-text="@Strings.RecurringJobsPage_Triggering"
+                            disabled="disabled">
                         <span class="glyphicon glyphicon-play-circle"></span>
                         @Strings.RecurringJobsPage_TriggerNow
                     </button>
@@ -56,10 +56,10 @@
                 @if (!IsReadOnly)
                 {
                     <button class="js-jobs-list-command btn btn-sm btn-default"
-                        data-url="@Url.To("/periodic/remove")"
-                        data-loading-text="@Strings.Common_Deleting"
-                        data-confirm="@Strings.Common_DeleteConfirm"
-                        disabled="disabled">
+                            data-url="@Url.To("/periodic/remove")"
+                            data-loading-text="@Strings.Common_Deleting"
+                            data-confirm="@Strings.Common_DeleteConfirm"
+                            disabled="disabled">
                         <span class="glyphicon glyphicon-remove"></span>
                         @Strings.Common_Delete
                     </button>
@@ -244,20 +244,20 @@
                                 @*操作*@
                                 <td style="min-width:200px" class="align-right">
                                     <button type="button" class="js-periodic-jobs-list-edit btn btn-info btn-xs"
-                                        data-toggle="modal"
-                                        data-target="#myModal"
-                                        data-id="@job.Id"
-                                        data-cron="@job.Cron"
-                                        data-queue="@job.Queue"
-                                        data-class="@job.Class"
-                                        data-method="@job.Method"
-                                        data-timezoneid="@job.TimeZoneId">
-                                        Edit
+                                            data-toggle="modal"
+                                            data-target="#myModal"
+                                            data-id="@job.Id"
+                                            data-cron="@job.Cron"
+                                            data-queue="@job.Queue"
+                                            data-class="@job.Class"
+                                            data-method="@job.Method"
+                                            data-timezoneid="@job.TimeZoneId">
+                                        @RayStrings.PeriodicJobsPage_Edit
                                     </button>
                                     @if (job.JobStateEnum == JobState.Running)
                                     {
                                         <button type="button" class="js-period-jobs-list-command btn btn-warning btn-xs"
-                                        data-url="@Url.To($"{PeriodicJobPage.PageRoute}/stop?jobId={job.Id}")">
+                                                data-url="@Url.To($"{PeriodicJobPage.PageRoute}/stop?jobId={job.Id}")">
                                             Stop
                                         </button>
                                         <button class="js-period-jobs-list-command btn btn-primary btn-xs">
@@ -268,7 +268,7 @@
                                     @if (job.JobStateEnum == JobState.Stoped)
                                     {
                                         <button class="js-period-jobs-list-command btn btn-success btn-xs"
-                                        data-url="@Url.To($"{PeriodicJobPage.PageRoute}/start?jobId={job.Id}")">
+                                                data-url="@Url.To($"{PeriodicJobPage.PageRoute}/start?jobId={job.Id}")">
                                             Start
                                         </button>
                                     }
@@ -281,9 +281,9 @@
                                         <pre class="stack-trace"><code>@Html.StackTrace(job.Error)</code></pre>
                                     </td>
                                 </tr>
-                                }
-                            </tr>
-                        }
+                            }
+                                </tr>
+                            }
                     </tbody>
                 </table>
             </div>
