--- a/samples/BiliBiliTool/src/Hangfire.Dashboard.Extensions/Pages/PeriodicJobEditPage.cshtml
+++ b/samples/BiliBiliTool/src/Hangfire.Dashboard.Extensions/Pages/PeriodicJobEditPage.cshtml
@@ -38,7 +38,7 @@
                     <input type="text" class="form-control"
                            disabled="disabled"
                            id="modal_Id"
-                           value="@this.PeriodicJob.Id" />
+                           value="@(PeriodicJob?.Id)" />
                 </div>
             </div>
 
@@ -48,7 +48,7 @@
                 <div class="col-sm-9">
                     <input type="text" class="form-control"
                            id="modal_Cron"
-                           value="@this.PeriodicJob.Cron">
+                           value="@(PeriodicJob?.Cron)">
                 </div>
             </div>
 
@@ -58,7 +58,7 @@
                 <div class="col-sm-9">
                     <input type="text" class="form-control"
                            id="modal_TimeZoneId"
-                           value="@PeriodicJob.TimeZoneId">
+                           value="@(PeriodicJob?.TimeZoneId)">
                 </div>
             </div>
 
@@ -68,7 +68,7 @@
                 <div class="col-sm-9">
                     <input type="text" class="form-control"
                            id="modal_Queue"
-                           value="@PeriodicJob.Queue">
+                           value="@(PeriodicJob?.Queue)">
                 </div>
             </div>
 
@@ -77,7 +77,7 @@
                 <div class="col-sm-9">
                     <input type="text" class="form-control"
                            id="modal_Class"
-                           value="@PeriodicJob.Class">
+                           value="@(PeriodicJob?.Class)">
                 </div>
             </div>
             <div class="form-group">
@@ -85,14 +85,14 @@
                 <div class="col-sm-9">
                     <input type="text" class="form-control"
                            id="modal_Method"
-                           value="@PeriodicJob.Method">
+                           value="@(PeriodicJob?.Method)">
                 </div>
             </div>
         </form>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-primary" id="btnPeriodicSubmit">Save changes</button>
     </div>
 </div>
 
