完成PeriodicJob的增删改

--- a/samples/BiliBiliTool/src/Hangfire.Dashboard.Extensions/Pages/PeriodicJobEditPage.cshtml
+++ b/samples/BiliBiliTool/src/Hangfire.Dashboard.Extensions/Pages/PeriodicJobEditPage.cshtml
@@ -98,5 +98,5 @@
 </div>
 
 
-<script src="@Url.To("/js0")"></script>
-<script src="@Url.To("/js-ext0")"></script>
+@*<script src="@Url.To("/js0")"></script>*@
+@*<script src="@Url.To("/js-ext0")"></script>*@
