--- a/samples/BiliBiliTool/src/Hangfire.Dashboard.Extensions/Pages/PeriodicJobEditPage.cshtml
+++ b/samples/BiliBiliTool/src/Hangfire.Dashboard.Extensions/Pages/PeriodicJobEditPage.cshtml
@@ -57,8 +57,8 @@
                         @foreach (var item in TimeZones)
                         {
                             var selected = item.Key == (PeriodicJob?.TimeZoneId ?? DefaultTimeZoneId)
-                                ? "selected"
-                                : "";
+                            ? "selected"
+                            : "";
                             <option value="@item.Key" @selected>@item.Value</option>
                         }
                     </select>
@@ -97,10 +97,7 @@
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        @*<button type="button" class="btn btn-primary" id="btnPeriodicSubmit" data-url="@Url.To("/periodic/addOrUpdate")" onclick="periodicSubmit()">Save changes</button>*@
         <button type="button" class="btn btn-primary" id="btnPeriodicSubmit" data-url="@Url.To("/periodic/addOrUpdate")">Save changes</button>
     </div>
 </div>
-
-
-@*<script src="@Url.To("/js0")"></script>*@
-@*<script src="@Url.To("/js-ext0")"></script>*@
